--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -71,9 +71,13 @@
 	}
 
 	body {
-		background: #1b1f22;
+		/* background: #1b1f22; */
 	}
 
+	.black-backgroud {
+		background: #1b1f22;
+		height: 100em;
+	}
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after, body.is-switching *, body.is-switching *:before, body.is-switching *:after {
 			-moz-animation: none !important;
 			-webkit-animation: none !important;
